--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "weininsel-wehr",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "format": "prettier --write \"src/**/*.{js,jsx}\""
-  },
-  "dependencies": {
-    "@headlessui/react": "^2.1.8",
-    "@supabase/supabase-js": "^2.45.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-pdf": "^9.1.0",
-    "react-router-dom": "^6.26.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@eslint/js": "^9.10.0",
-    "@stylistic/eslint-plugin": "^2.8.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.2",
-    "globals": "^15.9.0",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
-  }
+    "name": "weininsel-wehr",
+    "private": true,
+    "version": "1.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "format": "prettier --write \"src/**/*.{js,jsx}\""
+    },
+    "dependencies": {
+        "@headlessui/react": "^2.1.8",
+        "@supabase/supabase-js": "^2.45.3",
+        "gapi-script": "^1.2.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-pdf": "^9.1.0",
+        "react-router-dom": "^6.26.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@eslint/js": "^9.10.0",
+        "@stylistic/eslint-plugin": "^2.8.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.10.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "^7.35.2",
+        "globals": "^15.9.0",
+        "prettier": "^3.3.3",
+        "tailwindcss": "^3.4.10",
+        "vite": "^5.4.1"
+    }
 }
