--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "format": "prettier --write \"src/**/*.{js,jsx}\""
     },
     "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
         "@headlessui/react": "^2.1.8",
+        "@mui/icons-material": "^6.1.1",
+        "@mui/material": "^6.1.1",
         "@supabase/supabase-js": "^2.45.3",
         "gapi-script": "^1.2.0",
         "react": "^18.3.1",
