--- a/package.json
+++ b/package.json
@@ -11,28 +11,30 @@
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
-        "@headlessui/react": "^2.1.8",
-        "@mui/icons-material": "^6.1.1",
-        "@mui/material": "^6.1.1",
-        "@supabase/supabase-js": "^2.45.3",
+        "@headlessui/react": "^2.1.9",
+        "@mui/icons-material": "^6.1.2",
+        "@mui/material": "^6.1.2",
+        "@supabase/supabase-js": "^2.45.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-pdf": "^9.1.0",
-        "react-router-dom": "^6.26.2"
+        "react-pdf": "^9.1.1",
+        "react-router-dom": "^6.26.2",
+        "terser": "^5.34.1",
+        "vite-plugin-compression": "^0.5.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.25.2",
-        "@eslint/js": "^9.10.0",
-        "@stylistic/eslint-plugin": "^2.8.0",
-        "@vitejs/plugin-react": "^4.3.1",
+        "@babel/core": "^7.25.7",
+        "@eslint/js": "^9.12.0",
+        "@stylistic/eslint-plugin": "^2.9.0",
+        "@vitejs/plugin-react": "^4.3.2",
         "autoprefixer": "^10.4.20",
-        "eslint": "^9.10.0",
+        "eslint": "^9.12.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
-        "eslint-plugin-react": "^7.35.2",
-        "globals": "^15.9.0",
+        "eslint-plugin-react": "^7.37.1",
+        "globals": "^15.10.0",
         "prettier": "^3.3.3",
-        "tailwindcss": "^3.4.10",
-        "vite": "^5.4.1"
+        "tailwindcss": "^3.4.13",
+        "vite": "^5.4.8"
     }
 }
